[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meldlane-tasks"
version = "0.1.0"
description = "TaskSink: one Task contract, push to markdown, SQLite, or Plane without the caller knowing which"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Roman Fakhrutdinov" }]
requires-python = ">=3.11"
keywords = [
    "task-tracker", "project-management", "plane", "markdown", "sqlite",
    "task-sink", "issue-tracker", "sync",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
]
dependencies = [
    "pydantic",
    "aiosqlite",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["meldlane_tasks*"]
